src/objects/CareMeridian_Contract__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIN_NPI__c</fullName>
        <label>TIN-NPI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term_Begin_Date__c</fullName>
        <inlineHelpText>A defined period of time within a contract in which the contract terms or rates cannot be changed.</inlineHelpText>
        <label>Term Period Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <inlineHelpText>A defined period of time within a contract in which the contract terms or rates cannot be changed.</inlineHelpText>
        <label>Term Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <inlineHelpText>The end date of a contract. The contract is no longer valid after this date.</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Group__c</fullName>
        <formula>IF(Days_Before_Term__c &gt;29, &apos;C | 30-90&apos;, 
  IF(Days_Before_Term__c &gt;4, &apos;B | 5-30&apos;,
    IF(Days_Before_Term__c &gt;0, &apos;A | 1-5&apos;, &apos;n/a&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Termination Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Notice_Other__c</fullName>
        <label>Termination Notice - Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Notice__c</fullName>
        <label>Termination Notice</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapies_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Therapies Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Therapies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>Therapies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Therapy_Details__c</fullName>
        <label>Therapy Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Therapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transportation_Details__c</fullName>
        <label>Transportation Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <label>Type of Change</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wound_Vac_Details__c</fullName>
        <label>Wound Vac Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wound_Vac__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wound Vac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_1_Sitter_Details__c</fullName>
        <label>1:1 Sitter Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_1_Sitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1:1 Sitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_1_Supervision_Details__c</fullName>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>1:1 Supervision Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1_1_Supervision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used in NeuroRestorative contracts.</description>
        <label>1:1 Supervision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>email_temp_is_record_new__c</fullName>
        <defaultValue>true</defaultValue>
        <label>email temp is record new</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>Active_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Renegotiation_Deadline__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>Term_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Active Contracts</label>
    </listViews>
    <listViews>
        <fullName>Active_LetterOfAgreement</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Renegotiation_Deadline__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>Term_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Letter of Agreement</value>
        </filters>
        <label>Active LOA</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Renegotiation_Deadline__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>Term_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Renegotiation_Deadline__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>Term_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_LOAs</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Renegotiation_Deadline__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>Term_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Letter of Agreement</value>
        </filters>
        <label>All LOAs</label>
    </listViews>
    <listViews>
        <fullName>Closed_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed</label>
    </listViews>
    <listViews>
        <fullName>Closed_LOAs</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Renewed__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Open_Ended_Termintion_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Letter of Agreement</value>
        </filters>
        <label>Closed LOAs</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <recordTypes>
        <fullName>CareMeridian_Contracts</fullName>
        <active>true</active>
        <label>CareMeridian Contracts</label>
    </recordTypes>
    <recordTypes>
        <fullName>NeuroRestorative_Contracts</fullName>
        <active>true</active>
        <label>NeuroRestorative Contracts</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Filing_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Filing_Requirements__c ) = &apos;Yes&apos; &amp;&amp;
ISBLANK( TEXT( Filing_Deadline__c ) )</errorConditionFormula>
        <errorDisplayField>Filing_Deadline__c</errorDisplayField>
        <errorMessage>Filing Deadline Details are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Filing_Requirements_Other</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Filing_Deadline__c  ) = &apos;Other&apos; &amp;&amp;
ISBLANK(   Filing_Deadline_Other__c  )</errorConditionFormula>
        <errorDisplayField>Filing_Deadline_Other__c</errorDisplayField>
        <errorMessage>Filing Deadline - Other is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_must_be_new</fullName>
        <active>true</active>
        <errorConditionFormula>Name =  Previous_Contract__r.Name &amp;&amp; ! ISBLANK(Previous_Contract__r.Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>In order to save this edit you must change the Contract Name to include new dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(  Payment_Requirements__c ) = &apos;Yes&apos; &amp;&amp;
ISBLANK( TEXT(  Payment_Deadline__c ) )</errorConditionFormula>
        <errorDisplayField>Payment_Deadline__c</errorDisplayField>
        <errorMessage>Payment Deadline is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Requirements_Other</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Payment_Deadline__c  ) = &apos;Other&apos; &amp;&amp;
ISBLANK(  Payment_Deadline_Other__c  )</errorConditionFormula>
        <errorDisplayField>Payment_Deadline_Other__c</errorDisplayField>
        <errorMessage>Payment Deadline - Other is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_Discount</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Bill_Rate__c ) = &apos;Discounted Rate&apos; &amp;&amp;
ISBLANK(    Percentage_Discount__c )</errorConditionFormula>
        <errorDisplayField>Percentage_Discount__c</errorDisplayField>
        <errorMessage>Percentage Discount is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resubmission_Deadline_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(   Resubmission_Deadline_Requirements__c ) = &apos;Yes&apos; &amp;&amp;
ISBLANK( TEXT(   Resubmission_Deadline__c ) )</errorConditionFormula>
        <errorDisplayField>Resubmission_Deadline__c</errorDisplayField>
        <errorMessage>Resubmission Deadline is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resubmission_Deadline_Requirements_Other</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Resubmission_Deadline__c   ) = &apos;Other&apos; &amp;&amp;
 ISBLANK(  Resubmission_Deadline_Other__c   )</errorConditionFormula>
        <errorDisplayField>Resubmission_Deadline_Other__c</errorDisplayField>
        <errorMessage>Resubmission Deadline - Other is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Termination_Notice_Other</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Termination_Notice__c   ) = &apos;Other&apos; &amp;&amp;
ISBLANK(    Termination_Notice_Other__c   )</errorConditionFormula>
        <errorDisplayField>Termination_Notice_Other__c</errorDisplayField>
        <errorMessage>Termination Notice Other is required</errorMessage>
    </validationRules>
</CustomObject>